@@ -23,7 +23,7 @@ import inspect
 import os
 import roystonea
 
-LOGGING_PATH = os.path.join(roystonea.ROYSTONEA_ROOT, "log/")
+LOGGING_PATH = os.path.join(roystonea.ROYSTONEA_ROOT, "runtime/log/")
 
 # log_owner = sys._getframe(1).f_globals.get('__name__')
 log_owner = inspect.stack()[1][1][:-3]
