@@ -6,7 +6,6 @@ ex. "python Coordinator.py 192.168.10.1 10000"
 ## You have to convert "HOST" to "int" type
 
 by Teddy, 2012/03/07
-'''
 
 from scripts.include.CommonHandler import  passArguments
 from scripts.include.Client import *
@@ -17,11 +16,18 @@ import MySQLdb as mdb
 import sys
 from scripts.include import CommonHandler, Message
 
+'''
+#from Roystonea.logger import logger
+# import os
+from logger import logger
+#TODO import pexpect
+
 class Coordinator(CommonHandler):
+    from config.coordinatorConfig import *
     ''' custom init variable '''
-    num_rthreads = 4
-    FILENAME_MY_CONFIG = 'Coordinator_cfg'
-    level = "coordinator"
+    FILENAME_MY_CONFIG = FILENAME_MY_CONFIG
+    num_rthreads = num_rthreads
+    level = level
     
     def __init__(self, host, port):
         CommonHandler.__init__(self, host, port)
@@ -35,10 +41,10 @@ class Coordinator(CommonHandler):
             self.sayHello,          # hello function
         ))
         # database imformation, use config to replace this part
-        self.db_host = 'localhost'
-        self.db_account = 'root'
-        self.db_password = '87888'
-        self.db_name = 'roystonea_cluster'
+        self.db_host = db_host
+        self.db_account = db_account
+        self.db_password = db_password
+        self.db_name = db_name
    
     # receive msg from Rack to query imformation from database
     def RackAlgorithmResourceInformation(self, req):
@@ -141,6 +147,70 @@ class Coordinator(CommonHandler):
             print 'Error %d: %s' %(e.args[0], e.args[1])
             sys.exit(1)
     
+    def PortMapping(self, vmname, vmip, vmport, hostport, action):
+        if action == 'a':
+            #TODO cmd_iptables
+            iptables_cmd = '%s %s PREROUTING -p tcp --dport %s -j DNAT --to %s:%s' \
+                    %(cmd_iptables, '-A', hostport, vmip, vmport)
+            logger.info('Add port mapping for %s, from %s to %s on hostmachine'%(vmname, vmport, hostport))
+            logger.debug(iptables_cmd)
+
+        elif action == 'd':
+            iptables_cmd = '%s %s PREROUTING -p tcp --dport %s -j DNAT --to %s:%s' \
+                    %(cmd_iptables, '-D', hostport, vmip, vmport)
+            logger.info('Delete port mapping for %s, from %s to %s on hostmachine'%(vmname, vmport, hostport))
+            logger.debug(iptables_cmd)
+        else :
+            logger.error('Error argument!')
+            return 0
+
+        (result, value) = pexpect.run(iptables_cmd, withexitstatus = 1)
+
+        if value != 0 :
+            logger.error(result)
+            return 0
+
+        return 1
+
+    # if connect:
+    #     log.info('Start.')
+    #     log.info('Database connected.')
+    #     while 1:
+    #         query_portreq = "SELECT * FROM %s WHERE state='adding' \
+    #                 OR state='deleting 'ORDER BY hostport"%(porttb)
+    #         db.query(query_portreq)
+    #         req_res = db.store_result()
+    #         fetched_req_data = req_res.fetch_row()
+    #         while fetched_req_data:
+    #             state = fetched_req_data[0][idx_state]
+    #             vmname = fetched_req_data[0][idx_vmname]
+    #             vmport = fetched_req_data[0][idx_vmport]
+    #             oldhostport = fetched_req_data[0][idx_hostport]
+
+    #             if (state == 'adding') :
+    #                 vmip = socket.gethostbyname(vmname)
+    #                 newport = oldhostport
+    #                 if (newport == '-1') :
+    #                     newport = get_port()
+    #                 if (newport != -1) :
+    #                     portmapping(vmname, vmip, vmport, newport, 'a')
+    #                     query = "UPDATE %s SET state='using', \
+    #                         hostport='%s', ip='%s' \
+    #                         WHERE hostport=%s"%(porttb, newport, vmip, oldhostport)
+    #                     db.query(query)
+    #                 else :
+    #                     log.error('No more port!')
+    #             elif (fetched_req_data[0][idx_state] == 'deleting') :
+    #                 #delete port
+    #                 vmip = fetched_req_data[0][idx_ip]
+    #                 portmapping(vmname, vmip, vmport, oldhostport, 'd')
+    #                 query = "DELETE FROM %s WHERE hostport=%s"%(porttb, oldhostport)
+    #                 db.query(query)
+    #             else :
+    #                 log.error("I don't know what's wrong!")
+
+    #             fetched_req_data = req_res.fetch_row()
+    #         time.sleep(sleep_time)
     def sayHello(self):
         print 'Hello'
     
