@@ -1,11 +1,14 @@
 2012-10-01 ~~ 2012-10-07
     by Ray Shih:
         view source code
+	by Brian Hu:
+		view source code
 
 2012-10-08 ~~ 2012-10-14
     by Ray Shih:
         view source code and learning xen and libvirt
-        
+    by Brian Hu:
+		view source code and learning iptables
 
 2012-10-15 ~~ 2012-10-21
     by Ray Shih:
@@ -14,3 +17,8 @@
         建立自動化測試for ubuntu vm on libvirt
         實作 royctl run 介面
             sudo royctl.py run {{package_name}} "{{execute_method_include_params}}"
+
+	by Brian Hu:
+		write logger.py, other scripts can use logger simply by importing logger now
+		implement Coordinator.py( there are still some issues about mysql db)
+		move Coordinator's configuration from the script itself to config file, so it's much more plugable now
